[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
# build-backend = "backend"

[project]
# name = "netcenframe"
name = "netcenframe"
version = "0.0.3"
authors = [
    { name="Benedikt", email="benedikt_chmie@web.de" },
]
description = "Wrapper around NetCenLib that produces as output a sorted pandas DataFrame"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["network", "analysis", "centrality"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "networkx",
    "netcenlib",
    "nx-parallel",
    "joblib",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools]
packages = ["netcenframe"]

# [tool.setuptools_scm]
# version = {tag = v0.0.1}
